--- a/top_stories/week/page5.html
+++ b/top_stories/week/page5.html
@@ -411,7 +411,7 @@
                                             href="https://news.ycombinator.com/user?id=hellofunk">hellofunk</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527774648"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    215 points
+                                    216 points
                                 </span>
                             </td>
                         </tr>
@@ -519,17 +519,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://github.com/sodium-friends/learntocrypto">Learn cryptographic engineering by example</a>
+                                    <a href="https://www.bloomberg.com/news/articles/2018-05-31/america-s-teens-are-choosing-youtube-over-facebook">America’s Teens Are Choosing YouTube Over Facebook</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17183784">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17200996">
                                         
-                                            10 comments
+                                            146 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=praxis23">praxis23</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527638390"
+                                            href="https://news.ycombinator.com/user?id=doener">doener</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527806880"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     207 points
                                 </span>
@@ -580,7 +580,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527825604" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527826204" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
