--- a/top_stories/halfweek/page5.html
+++ b/top_stories/halfweek/page5.html
@@ -183,19 +183,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://github.com/ImageOptim/gifski/releases/tag/0.8.3">Windows gifski.exe with a digital signature</a>
+                                    <a href="https://www.bloomberg.com/news/features/2018-05-24/how-not-to-negotiate-a-6-1-billion-deal">How Not to Negotiate a $6.1B Deal</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17195758">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17199860">
                                         
-                                            65 comments
+                                            53 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=ronjouch">ronjouch</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527769543"
+                                            href="https://news.ycombinator.com/user?id=dpflan">dpflan</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527798138"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    144 points
+                                    146 points
                                 </span>
                             </td>
                         </tr>
@@ -453,7 +453,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17198175">
                                         
-                                            64 comments
+                                            65 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=okket">okket</a></strong> &nbsp;•&nbsp;
@@ -580,7 +580,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527825604" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527826204" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
