--- a/top_stories/halfweek/page5.html
+++ b/top_stories/halfweek/page5.html
@@ -183,19 +183,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.bloomberg.com/news/features/2018-05-24/how-not-to-negotiate-a-6-1-billion-deal">How Not to Negotiate a $6.1B Deal</a>
+                                    <a href="https://priceonomics.com/post/45768546804/diamonds-are-bullshit">Diamonds Are Bullshit</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17199860">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17184539">
                                         
-                                            54 comments
+                                            44 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=dpflan">dpflan</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527798138"
+                                            href="https://news.ycombinator.com/user?id=joering2">joering2</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527646937"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    147 points
+                                    148 points
                                 </span>
                             </td>
                         </tr>
@@ -580,7 +580,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527826804" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527827403" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
