--- a/top_stories/week/page6.html
+++ b/top_stories/week/page6.html
@@ -375,17 +375,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://mtlynch.io/since-quitting/">What I’ve Been Doing Since Quitting My Job</a>
+                                    <a href="https://www.logolounge.com/articles/2018-logo-trends">Logo design trends of 2018</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17186865">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17196558">
                                         
-                                            115 comments
+                                            37 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=TonnyGaric">TonnyGaric</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527680549"
+                                            href="https://news.ycombinator.com/user?id=zwieback">zwieback</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527776977"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     193 points
                                 </span>
@@ -399,19 +399,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.logolounge.com/articles/2018-logo-trends">Logo design trends of 2018</a>
+                                    <a href="http://worrydream.com/Engelbart/">A few words on Doug Engelbart (2013)</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17196558">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17194456">
                                         
-                                            37 comments
+                                            64 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=zwieback">zwieback</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527776977"
+                                            href="https://news.ycombinator.com/user?id=mpweiher">mpweiher</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527749697"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    192 points
+                                    193 points
                                 </span>
                             </td>
                         </tr>
@@ -457,7 +457,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527826804" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527827403" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
