--- a/top_stories/daily/page2.html
+++ b/top_stories/daily/page2.html
@@ -183,19 +183,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://blog.cloudflare.com/today-we-mitigated-1-1-1-1/">1.1.1.1 outage explanation</a>
+                                    <a href="http://www.cs.cornell.edu/home/kleinber/networks-book/networks-book-ch18.pdf">Power Laws and Rich-Get-Richer Phenomena (2010) [pdf]</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17201830">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17199766">
                                         
-                                            3 comments
+                                            13 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=adamch">adamch</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527816061"
+                                            href="https://news.ycombinator.com/user?id=marojejian">marojejian</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527797535"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    88 points
+                                    92 points
                                 </span>
                             </td>
                         </tr>
@@ -291,7 +291,7 @@
                                             href="https://news.ycombinator.com/user?id=porsager">porsager</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527796909"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    74 points
+                                    75 points
                                 </span>
                             </td>
                         </tr>
@@ -309,13 +309,13 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17201236">
                                         
-                                            87 comments
+                                            88 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=pm24601">pm24601</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527809126"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    72 points
+                                    73 points
                                 </span>
                             </td>
                         </tr>
@@ -580,7 +580,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527829804" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527830403" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
