--- a/top_stories/halfweek/page3.html
+++ b/top_stories/halfweek/page3.html
@@ -483,7 +483,7 @@
                                             href="https://news.ycombinator.com/user?id=alex_young">alex_young</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527778073"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    172 points
+                                    173 points
                                 </span>
                             </td>
                         </tr>
@@ -519,17 +519,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.marketwatch.com/story/venmo-stalkers-or-amateur-sleuths-they-out-cheating-boyfriends-spy-on-exes-and-see-who-buys-drugs-2018-05-11">People using Venmo to spy on cheating spouses</a>
+                                    <a href="https://www.bloomberg.com/news/features/2018-05-24/how-not-to-negotiate-a-6-1-billion-deal">How Not to Negotiate a $6.1B Deal</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17181130">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17199860">
                                         
-                                            200 comments
+                                            62 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=maxshmax">maxshmax</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527614430"
+                                            href="https://news.ycombinator.com/user?id=dpflan">dpflan</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527798138"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     171 points
                                 </span>
@@ -580,7 +580,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527835804" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527836403" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
