--- a/top_stories/daily/page6.html
+++ b/top_stories/daily/page6.html
@@ -67,9 +67,9 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17180686" class="node"><i
+                                    <a href="https://news.ycombinator.com/item?id=17189652" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="https://recursive.recipes/">Recursive Recipes – directions to make food from scratch</a>
+                                    <a href="https://writingstreak.io/?src=hn">Write every day, measure your progress, achieve your writing goals</a>
                                 </span>
                             </td>
                         </tr>
@@ -81,9 +81,9 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17189652" class="node"><i
+                                    <a href="https://news.ycombinator.com/item?id=17180686" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="https://writingstreak.io/?src=hn">Write every day, measure your progress, achieve your writing goals</a>
+                                    <a href="https://recursive.recipes/">Recursive Recipes – directions to make food from scratch</a>
                                 </span>
                             </td>
                         </tr>
@@ -399,17 +399,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://airdev.co/post/demystifying-tech-episode-1-what-is-an-api-1527801885166x161315477220341570">What is an API Anyway? – Episode 1 of 'Demystifying Tech'</a>
+                                    <a href="https://www.washingtoncitypaper.com/news/article/21006459/behind-the-consulting-firm-raking-in-millions-from-dc-charter-schools">Behind the Consulting Firm Raking in Millions from D.C. Charter Schools</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17201663">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17201825">
                                         
-                                            1 comments
+                                            comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=leeale10">leeale10</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527814409"
+                                            href="https://news.ycombinator.com/user?id=smacktoward">smacktoward</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527816012"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     9 points
                                 </span>
@@ -457,7 +457,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527837004" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527837604" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
