--- a/top_stories/week/page6.html
+++ b/top_stories/week/page6.html
@@ -375,19 +375,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="http://worrydream.com/Engelbart/">A few words on Doug Engelbart (2013)</a>
+                                    <a href="https://blog.cloudflare.com/today-we-mitigated-1-1-1-1/">1.1.1.1 outage explanation</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17194456">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17201830">
                                         
-                                            66 comments
+                                            26 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=mpweiher">mpweiher</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527749697"
+                                            href="https://news.ycombinator.com/user?id=adamch">adamch</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527816061"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    193 points
+                                    194 points
                                 </span>
                             </td>
                         </tr>
@@ -399,17 +399,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://mtlynch.io/since-quitting/">What I’ve Been Doing Since Quitting My Job</a>
+                                    <a href="http://worrydream.com/Engelbart/">A few words on Doug Engelbart (2013)</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17186865">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17194456">
                                         
-                                            115 comments
+                                            66 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=TonnyGaric">TonnyGaric</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527680549"
+                                            href="https://news.ycombinator.com/user?id=mpweiher">mpweiher</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527749697"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     193 points
                                 </span>
@@ -457,7 +457,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527841803" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527842404" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
