--- a/top_stories/halfweek/page4.html
+++ b/top_stories/halfweek/page4.html
@@ -519,19 +519,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://priceonomics.com/post/45768546804/diamonds-are-bullshit">Diamonds Are Bullshit</a>
+                                    <a href="https://arxiv.org/abs/1002.2284">“Markets are efficient if and only if P = NP”</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17184539">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17202950">
                                         
-                                            44 comments
+                                            78 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=joering2">joering2</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527646937"
+                                            href="https://news.ycombinator.com/user?id=perculis">perculis</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527833099"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    148 points
+                                    151 points
                                 </span>
                             </td>
                         </tr>
@@ -580,7 +580,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527844204" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527844804" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
