--- a/top_stories/halfweek/page5.html
+++ b/top_stories/halfweek/page5.html
@@ -477,13 +477,13 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17198481">
                                         
-                                            58 comments
+                                            59 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=el_duderino">el_duderino</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527789286"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    116 points
+                                    117 points
                                 </span>
                             </td>
                         </tr>
@@ -519,17 +519,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.newyorker.com/tech/elements/the-never-ending-war-on-fake-reviews">The Never-Ending War on Fake Reviews</a>
+                                    <a href="http://www.cs.cornell.edu/home/kleinber/networks-book/networks-book-ch18.pdf">Power Laws and Rich-Get-Richer Phenomena (2010) [pdf]</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17195692">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17199766">
                                         
-                                            90 comments
+                                            22 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=raleighm">raleighm</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527768639"
+                                            href="https://news.ycombinator.com/user?id=marojejian">marojejian</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527797535"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     113 points
                                 </span>
@@ -580,7 +580,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527846004" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527846603" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
