--- a/top_stories/halfweek/page6.html
+++ b/top_stories/halfweek/page6.html
@@ -183,17 +183,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.wootric.com/blog/our-machine-learning-journey-from-zero-to-customer-value-in-12-months/">Our machine learning and NLP journey</a>
+                                    <a href="https://www.newyorker.com/tech/elements/the-never-ending-war-on-fake-reviews">The Never-Ending War on Fake Reviews</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17181570">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17195692">
                                         
-                                            27 comments
+                                            90 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=prabhatjha">prabhatjha</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527617167"
+                                            href="https://news.ycombinator.com/user?id=raleighm">raleighm</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527768639"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     113 points
                                 </span>
@@ -207,19 +207,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="http://www.cs.cornell.edu/home/kleinber/networks-book/networks-book-ch18.pdf">Power Laws and Rich-Get-Richer Phenomena (2010) [pdf]</a>
+                                    <a href="https://www.wootric.com/blog/our-machine-learning-journey-from-zero-to-customer-value-in-12-months/">Our machine learning and NLP journey</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17199766">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17181570">
                                         
-                                            20 comments
+                                            27 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=marojejian">marojejian</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527797535"
+                                            href="https://news.ycombinator.com/user?id=prabhatjha">prabhatjha</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527617167"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    112 points
+                                    113 points
                                 </span>
                             </td>
                         </tr>
@@ -457,7 +457,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527846004" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527846603" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
