--- a/top_stories/week/page6.html
+++ b/top_stories/week/page6.html
@@ -399,17 +399,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="http://blog.netbsd.org/tnf/entry/network_security_audit">NetBSD Network Security Audit</a>
+                                    <a href="https://github.com/ImageOptim/gifski/releases/tag/0.8.3">Windows gifski.exe with a digital signature</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17171033">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17195758">
                                         
-                                            32 comments
+                                            86 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=ognyankulev">ognyankulev</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527492091"
+                                            href="https://news.ycombinator.com/user?id=ronjouch">ronjouch</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527769543"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     191 points
                                 </span>
@@ -457,7 +457,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527846603" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527847203" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
