--- a/top_stories/week/page4.html
+++ b/top_stories/week/page4.html
@@ -519,19 +519,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://lists.gnu.org/archive/html/emacs-devel/2018-05/msg00765.html">Emacs 26.1 released</a>
+                                    <a href="https://blog.cloudflare.com/today-we-mitigated-1-1-1-1/">1.1.1.1 outage explanation</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17172524">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17201830">
                                         
-                                            100 comments
+                                            33 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=deng">deng</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527517144"
+                                            href="https://news.ycombinator.com/user?id=adamch">adamch</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527816061"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    230 points
+                                    234 points
                                 </span>
                             </td>
                         </tr>
@@ -580,7 +580,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527849004" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527849604" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
