--- a/top_stories/halfweek/page4.html
+++ b/top_stories/halfweek/page4.html
@@ -123,9 +123,9 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17178302" class="node"><i
+                                    <a href="https://news.ycombinator.com/item?id=17194353" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="https://www.jqbx.fm">JQBX – Social Listening Web/Mobile App</a>
+                                    <a href="https://github.com/egoist/maid">Maid – Markdown driven task runner</a>
                                 </span>
                             </td>
                         </tr>
@@ -183,19 +183,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://threadreaderapp.com/thread/1002103360646823936.html">How to get rich without getting lucky</a>
+                                    <a href="https://scholar.harvard.edu/fryer/publications/are-high-quality-schools-enough-increase-achievement-among-poor-evidence-harlem-c">High-quality schools can increase academic achievement among the poor (2010)</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17203304">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17194167">
                                         
-                                            125 comments
+                                            215 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=madmax108">madmax108</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527838002"
+                                            href="https://news.ycombinator.com/user?id=MaysonL">MaysonL</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527744363"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    168 points
+                                    170 points
                                 </span>
                             </td>
                         </tr>
@@ -580,7 +580,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527854403" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527855003" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
