--- a/top_stories/week/page6.html
+++ b/top_stories/week/page6.html
@@ -123,9 +123,9 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17178302" class="node"><i
+                                    <a href="https://news.ycombinator.com/item?id=17194353" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="https://www.jqbx.fm">JQBX – Social Listening Web/Mobile App</a>
+                                    <a href="https://github.com/egoist/maid">Maid – Markdown driven task runner</a>
                                 </span>
                             </td>
                         </tr>
@@ -387,7 +387,7 @@
                                             href="https://news.ycombinator.com/user?id=dpflan">dpflan</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527798138"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    194 points
+                                    195 points
                                 </span>
                             </td>
                         </tr>
@@ -457,7 +457,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527854403" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527855003" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
