--- a/top_stories/halfweek/index.html
+++ b/top_stories/halfweek/index.html
@@ -123,9 +123,9 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17178302" class="node"><i
+                                    <a href="https://news.ycombinator.com/item?id=17194353" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="https://www.jqbx.fm">JQBX – Social Listening Web/Mobile App</a>
+                                    <a href="https://github.com/egoist/maid">Maid – Markdown driven task runner</a>
                                 </span>
                             </td>
                         </tr>
@@ -291,7 +291,7 @@
                                             href="https://news.ycombinator.com/user?id=bkohlmann">bkohlmann</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527635967"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    727 points
+                                    728 points
                                 </span>
                             </td>
                         </tr>
@@ -309,13 +309,13 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17198610">
                                         
-                                            174 comments
+                                            175 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=fiveFeet">fiveFeet</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527790184"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    566 points
+                                    569 points
                                 </span>
                             </td>
                         </tr>
@@ -405,7 +405,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17190326">
                                         
-                                            180 comments
+                                            181 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=p1esk">p1esk</a></strong> &nbsp;•&nbsp;
@@ -574,7 +574,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527854403" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527855003" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
