--- a/top_stories/week/page1.html
+++ b/top_stories/week/page1.html
@@ -123,9 +123,9 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17178302" class="node"><i
+                                    <a href="https://news.ycombinator.com/item?id=17194353" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="https://www.jqbx.fm">JQBX – Social Listening Web/Mobile App</a>
+                                    <a href="https://github.com/egoist/maid">Maid – Markdown driven task runner</a>
                                 </span>
                             </td>
                         </tr>
@@ -213,7 +213,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17190326">
                                         
-                                            180 comments
+                                            181 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=p1esk">p1esk</a></strong> &nbsp;•&nbsp;
@@ -429,7 +429,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17159946">
                                         
-                                            393 comments
+                                            394 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=rexbee">rexbee</a></strong> &nbsp;•&nbsp;
@@ -580,7 +580,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527854403" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527855003" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
