--- a/top_stories/week/page3.html
+++ b/top_stories/week/page3.html
@@ -123,9 +123,9 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17178302" class="node"><i
+                                    <a href="https://news.ycombinator.com/item?id=17194353" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="https://www.jqbx.fm">JQBX – Social Listening Web/Mobile App</a>
+                                    <a href="https://github.com/egoist/maid">Maid – Markdown driven task runner</a>
                                 </span>
                             </td>
                         </tr>
@@ -363,7 +363,7 @@
                                             href="https://news.ycombinator.com/user?id=gringoDan">gringoDan</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527780943"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    283 points
+                                    284 points
                                 </span>
                             </td>
                         </tr>
@@ -525,13 +525,13 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17201830">
                                         
-                                            36 comments
+                                            37 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=adamch">adamch</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527816061"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    264 points
+                                    265 points
                                 </span>
                             </td>
                         </tr>
@@ -580,7 +580,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527854403" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527855003" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
