--- a/top_stories/halfweek/page4.html
+++ b/top_stories/halfweek/page4.html
@@ -381,7 +381,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17195951">
                                         
-                                            158 comments
+                                            159 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=Four_Star">Four_Star</a></strong> &nbsp;•&nbsp;
@@ -519,19 +519,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.theguardian.com/news/2018/may/29/the-financial-scandal-no-one-is-talking-about-big-four-accountancy-firms">Accountancy used to be boring and safe, but today it’s neither</a>
+                                    <a href="http://www.bbc.com/news/world-australia-44326034">ANZ, Deutsche Bank and Citigroup face 'criminal cartel' charges</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17186887">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17202827">
                                         
-                                            99 comments
+                                            29 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=NN88">NN88</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527680764"
+                                            href="https://news.ycombinator.com/user?id=lifeisstillgood">lifeisstillgood</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527831219"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    127 points
+                                    128 points
                                 </span>
                             </td>
                         </tr>
@@ -580,7 +580,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527858603" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527859204" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
