--- a/top_stories/daily/page1.html
+++ b/top_stories/daily/page1.html
@@ -183,19 +183,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://threadreaderapp.com/thread/1002103360646823936.html">How to get rich without getting lucky</a>
+                                    <a href="https://www.fastcompany.com/40579141/microsoft-is-now-worth-more-than-google">Microsoft is now worth more than Alphabet</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17203304">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17196880">
                                         
-                                            154 comments
+                                            173 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=madmax108">madmax108</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527838002"
+                                            href="https://news.ycombinator.com/user?id=Bhilai">Bhilai</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527779516"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    204 points
+                                    205 points
                                 </span>
                             </td>
                         </tr>
@@ -219,7 +219,7 @@
                                             href="https://news.ycombinator.com/user?id=dpflan">dpflan</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527798138"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    200 points
+                                    201 points
                                 </span>
                             </td>
                         </tr>
@@ -291,7 +291,7 @@
                                             href="https://news.ycombinator.com/user?id=lifeisstillgood">lifeisstillgood</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527831219"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    126 points
+                                    128 points
                                 </span>
                             </td>
                         </tr>
@@ -315,7 +315,7 @@
                                             href="https://news.ycombinator.com/user?id=marojejian">marojejian</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527797535"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    125 points
+                                    127 points
                                 </span>
                             </td>
                         </tr>
@@ -387,7 +387,7 @@
                                             href="https://news.ycombinator.com/user?id=porsager">porsager</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527796909"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    110 points
+                                    111 points
                                 </span>
                             </td>
                         </tr>
@@ -453,13 +453,13 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17203341">
                                         
-                                            22 comments
+                                            24 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=ingve">ingve</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527838523"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    98 points
+                                    100 points
                                 </span>
                             </td>
                         </tr>
@@ -531,7 +531,7 @@
                                             href="https://news.ycombinator.com/user?id=signa11">signa11</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527826431"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    91 points
+                                    92 points
                                 </span>
                             </td>
                         </tr>
@@ -580,7 +580,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527858603" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527859204" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
