--- a/top_stories/halfweek/page1.html
+++ b/top_stories/halfweek/page1.html
@@ -183,19 +183,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.bloomberg.com/news/articles/2018-05-31/america-s-teens-are-choosing-youtube-over-facebook">America’s Teens Are Choosing YouTube Over Facebook</a>
+                                    <a href="http://diamondssuck.com/">Diamonds Suck (2006)</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17200996">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17186457">
                                         
-                                            280 comments
+                                            214 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=doener">doener</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527806880"
+                                            href="https://news.ycombinator.com/user?id=nsomaru">nsomaru</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527675260"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    382 points
+                                    385 points
                                 </span>
                             </td>
                         </tr>
@@ -267,7 +267,7 @@
                                             href="https://news.ycombinator.com/user?id=DoreenMichele">DoreenMichele</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527695727"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    357 points
+                                    358 points
                                 </span>
                             </td>
                         </tr>
@@ -429,13 +429,13 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17201830">
                                         
-                                            43 comments
+                                            44 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=adamch">adamch</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527816061"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    300 points
+                                    303 points
                                 </span>
                             </td>
                         </tr>
@@ -580,7 +580,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527859804" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527860404" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
