--- a/jobs/page1.html
+++ b/jobs/page1.html
@@ -81,20 +81,6 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17180686" class="node"><i
-                                            class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="https://recursive.recipes/">Recursive Recipes – directions to make food from scratch</a>
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_hot_topic_title">
                                     <a href="https://news.ycombinator.com/item?id=17183241" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
                                     <a href="https://github.com/ry/deno">Deno, a secure TypeScript runtime using V8 and Go</a>
@@ -126,6 +112,20 @@
                                     <a href="https://news.ycombinator.com/item?id=17194353" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
                                     <a href="https://github.com/egoist/maid">Maid – Markdown driven task runner</a>
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_hot_topic_title">
+                                    <a href="https://news.ycombinator.com/item?id=17193453" class="node"><i
+                                            class="fas fa-comment"></i></a>&nbsp;
+                                    <a href="https://jeeliz.com/demos/faceFilter/demos/faceReplacement/faceSwap/">JavaScript/WebGL webcam face swap with color correction</a>
                                 </span>
                             </td>
                         </tr>
@@ -556,7 +556,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527870603" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527871203" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
