--- a/top_stories/daily/page6.html
+++ b/top_stories/daily/page6.html
@@ -183,19 +183,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.fastcodesign.com/90174299/silicon-valleys-company-towns-are-doomed">Silicon Valley’s company towns are doomed</a>
+                                    <a href="https://www.newscientist.com/article/2170532-people-with-big-brains-have-a-different-brain-structure-too/">People with big brains have a different brain structure too</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17200761">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17205073">
                                         
-                                            8 comments
+                                            comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=raleighm">raleighm</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527804548"
+                                            href="https://news.ycombinator.com/user?id=laurex">laurex</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527859842"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    9 points
+                                    8 points
                                 </span>
                             </td>
                         </tr>
@@ -399,17 +399,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.newscientist.com/article/2170532-people-with-big-brains-have-a-different-brain-structure-too/">People with big brains have a different brain structure too</a>
+                                    <a href="http://www.alphr.com/politics/1009470/article-13-EU-what-is-it-copyright">Article 13 could “destroy the internet as we know it”</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17205073">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17203559">
                                         
                                             comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=laurex">laurex</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527859842"
+                                            href="https://news.ycombinator.com/user?id=ericdykstra">ericdykstra</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527841828"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     7 points
                                 </span>
@@ -457,7 +457,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527871803" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527872404" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
